[gd_scene load_steps=3 format=2]

[ext_resource path="res://MainScene/Inspector/Property.gd" type="Script" id=1]
[ext_resource path="res://Theme.tres" type="Theme" id=2]

[node name="Property" type="Node2D"]
script = ExtResource( 1 )

[node name="ValueNum" type="SpinBox" parent="."]
margin_left = 150.0
margin_top = 2.0
margin_right = 229.0
margin_bottom = 33.0
allow_greater = true
allow_lesser = true

[node name="ValueBool" type="CheckBox" parent="."]
margin_left = 166.0
margin_top = 5.0
margin_right = 190.0
margin_bottom = 29.0

[node name="PropertyNameLabel" type="RichTextLabel" parent="."]
margin_top = 5.0
margin_right = 143.0
margin_bottom = 31.0
rect_clip_content = false
theme = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "Beam width"
text = "Beam width"
fit_content_height = true
scroll_active = false

[node name="UnitOptionButton" type="OptionButton" parent="."]
margin_left = 229.0
margin_top = 3.0
margin_right = 284.0
margin_bottom = 32.0
theme = ExtResource( 2 )
flat = true

[node name="UnitLabel" type="RichTextLabel" parent="."]
margin_left = 235.0
margin_top = 5.0
margin_right = 343.0
margin_bottom = 41.0
rect_clip_content = false
mouse_filter = 2
theme = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "units"
text = "units"
scroll_active = false

[connection signal="value_changed" from="ValueNum" to="." method="_on_ValueNum_value_changed"]
[connection signal="toggled" from="ValueBool" to="." method="_on_ValueBool_toggled"]
[connection signal="item_selected" from="UnitOptionButton" to="." method="_on_UnitOptionButton_item_selected"]
